--- a/src/components/Layout/style.module.scss
+++ b/src/components/Layout/style.module.scss
@@ -2,14 +2,14 @@
 
 .body {
   background-color: $dark;
-  color: $red;
+  color: $lightBlue;
   p,
   h1,
   h3,
   h4,
   li,
   a {
-    color: $red;
+    color: $lightBlue;
     text-decoration:none;
   }
   h1 {
