--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,5 +9,6 @@ $light: rgb(204, 204, 204);
 $dark: rgb(26, 26, 26);
 $green:  rgb(0,237,94);
 $red: rgb(244,67,54);
+$lightBlue: rgb(3,169,244);
 
 $map-box-line-color:rgb(71, 184, 224)
